// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _s-compose _f-549969169 _br-591716819 _b-1356927054 _tsx-200462076 _tsy-1997413435 _bs-1333969377 test1"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1841970073 _o-2052502900 who"
    />
    <div
      class="is_View _f-1841970073 _b-882581922 _p-380778870 _i-1175693305 ease-in-out-top"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1841970073 _o-2052502900 who"
    />
    <div
      class="is_View _f-1841970073 _b-882528300 _p-380778870 _i-291730777 ease-in-out-top"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-2052502900 _b-884464985"
    >
      <div
        class="is_View _f-2057920087 _o-2052502900 _b-884464985 hello-world"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-2052502900 _b-884464985"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-2052502900 _b-1356927054"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _p-375854071 _w-223966411 _mw-216954465 _mw-270440222"
    >
      <div
        class="is_View _f-2057920087 _w-1646823575 _h-624193174"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _i-297785135 _p-1610831171"
    >
      <div
        class="is_View _f-2057920087 _b-1356927054"
      >
        <div
          class="is_View _f-2057920087 _i-297785135 _p-1610831171 _b-1271940212"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _p-1080843536 home-top-dish"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_Text _c-1996280471 _fs-553822623"
    >
      <span
        class="is_Text _c-1996280471 _us-515705890"
      >
        <span
          class="is_Text _c-1703790598 _fs-553827428 _fw-291937703"
        >
          hello
        </span>
      </span>
    </span>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _o-1507267812 _t-210974122"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2057920087 _b-1081224980"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <span
      class="is_View _pe-1547870085 _w-640548506 _h-2047729177 _mw-1042395974 _mh-1620098797"
    />
    <span
      class="is_View _pe-1547870085 _w-1617835419 _h-944907578 _mw-2045465799 _mh-1316547470 _f-1514526504"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-549969169 _b-1356927054"
    />
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1538676587 _g-924523017"
      data-testid="flex-wrap"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _ai-1055227096 _jc-509505936 _f-1538676587"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _ai-1055227096 _jc-509505936 _f-308923572"
      data-testid="flex-wrap-conditional"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-1414769968 _ai-100157154 _jc-539327647 _ac-1733850890"
      data-testid="flex-properties"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2140124617 _br-1889339995 _mw-206346914 _o-2052502900 _p-1700019270 _w-487036092 _b-695440369 _c-958205817"
    >
      <div
        class="is_View _f-1791708213 _g-1913998404 _jc-539327647"
      >
        <span
          class="is_Text _c-1996280471"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _f-2141623076 _br-1889339995 _mw-206346914 _o-2052502900 _p-1700019270 _w-487036092 _b-695440369 _c-958205817"
    >
      <div
        class="is_View _f-1791708213 _g-1913998404 _jc-166379546"
      >
        <span
          class="is_Text _c-1996280471"
        >
          hello world
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View _g-924523017 _p-1046123992 _f-1757441471"
      data-testid="flex-wrap-media"
    >
      <span
        class="is_Text _c-1996280471"
      >
        hello world
      </span>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="_dsp_contents  font_body"
  >
    <div
      class="is_View t_group_animated _f-2057920087"
      data-testid="animated-group"
    >
      <div
        class="is_View _f-2057920087 _w-488138359 _b-553628758"
        data-testid="animated-group-child"
      />
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
